# p1

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  p1.code-workspace
Containers/: containers_test.cpp  containers_test.hpp
Inheritance/: inheritance_test.cpp  inheritance_test.hpp
Mutex/: mutex_test.cpp  mutex_test.hpp
Other/: atomic_hdr_test.cpp  atomic_hdr_test.hpp  chrono_hdr_test.cpp  chrono_hdr_test.hpp  constructor_test.cpp  constructor_test.hpp  delete_test.cpp  delete_test.hpp  functional_hdr_test.cpp  functional_hdr_test.hpp  future_hdr_test.cpp  future_hdr_test.hpp  initdata_test.cpp  initdata_test.hpp  lambda_test.cpp  lambda_test.hpp  rtti_cast_test.cpp  rtti_cast_test.hpp  rvalue_test.cpp  rvalue_test.hpp  static_test.cpp  static_test.hpp  virtual_function_test.cpp  virtual_function_test.hpp
Patterns/: pattern_abstract_factory.hpp  pattern_builder.hpp  pattern_factory_method.cpp  pattern_factory_method.hpp  patterns_behavior_test.cpp  patterns_behavior_test.hpp  patterns_creational_test.cpp  patterns_creational_test.hpp  patterns_structure_test.cpp  patterns_structure_test.hpp  patterns_test.cpp  patterns_test.hpp
Patterns/Behavior/: pattern_chain_of_responsibility.hpp  pattern_command.hpp  pattern_interpreter.hpp  pattern_iterator.hpp  pattern_mediator.hpp  pattern_memento.hpp  pattern_observer.hpp  pattern_state.cpp  pattern_state.hpp  pattern_strategy.hpp  pattern_template_method.hpp  pattern_visitor.hpp
Patterns/Creational/: pattern_factory_method.hpp  pattern_prototype.cpp  pattern_prototype.hpp  pattern_singleton.cpp  pattern_singleton.hpp
Patterns/Structure/: pattern_adapter.hpp  pattern_bridge.hpp  pattern_composite.hpp  pattern_decorator.hpp  pattern_facade.hpp  pattern_flyweight.hpp  pattern_proxy.hpp
ScopeGuard/: scopeguard_test.cpp  scopeguard_test.hpp
SmartPointer/: smartpointer_test.cpp  smartpointer_test.hpp
Template/: TStack.hpp  template_crtp_test.cpp  template_crtp_test.hpp  template_explicit_specialization_test.cpp  template_explicit_specialization_test.hpp  template_lambda_test.cpp  template_lambda_test.hpp  template_specialization_test.cpp  template_specialization_test.hpp  template_template_specialization_test.cpp  template_template_specialization_test.hpp  template_test.cpp  template_test.hpp  template_universal_arguments_test.cpp  template_universal_arguments_test.hpp  template_variable_arguments_test.cpp  template_variable_arguments_test.hpp
Thread/: ThreadSafeLTable.cpp  ThreadSafeLTable.hpp  ThreadSafeList.hpp  ThreadSafeQueue.cpp  ThreadSafeQueue.hpp  ThreadSafeStack.cpp  ThreadSafeStack.hpp  ThreadsPool.cpp  ThreadsPool.hpp  thread_test.cpp  thread_test.hpp
TypeDeclaration/: TypeUtils.hpp  crtp_test.cpp  crtp_test.hpp  pointer_to_class_member_test.cpp  pointer_to_class_member_test.hpp  typedeclaration_test.cpp  typedeclaration_test.hpp
Utils/: Utils.cpp  Utils.hpp
VariableArgumentsTemplate/: vatemplate_test.cpp  vatemplate_test.hpp
Virtual/: virtual_function_test.cpp  virtual_function_test.hpp  virtual_table_test.cpp  virtual_table_test.hpp
doc/: VSCode.txt
mutex/: mutex_test.cpp  mutex_test.hpp
